--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,15 @@
   text-align: center;
 }
 
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
